# CAVI_Transcoding_Server

./: CAVI_Transcoding_Server.sln  README.md
CAVI_Transcoding_Main/: .atom-gdb.json  Cargo.toml
CAVI_Transcoding_Main/.vscode - Copy/: settings.json  tasks.json
CAVI_Transcoding_Main/src/: client.rs  main.rs  server.rs
CAVI_Transcoding_Server/: CAVI_Transcoding_Server.rsproj
CAVI_Transcoding_Server/src/: main.rs
